--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "Mind Games",
+  "description": "brain-games",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,8 +12,7 @@
     "url": "git+https://github.com/IvanSH-Jr/frontend-project-44.git"
   },
   "keywords": [
-    "mind",
-    "games",
+    "brain-games",
     "hexlet",
     "project"
   ],
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/IvanSH-Jr/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/IvanSH-Jr/frontend-project-44#readme"
+  "homepage": "https://github.com/IvanSH-Jr/frontend-project-44#readme",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  }
 }
